--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "DestekSunucuLink": "https://discord.gg/ZzwQxZx65w",
   "demirKazmaFiyat": 3000,
   "elmasKazmaFiyat": 9000,
+  "oltaFiyat": 4500,
   "vergiMiktar": 15,
   "çalışKazanç": 150,
   "günlükKazanç": 900,
   "slotLimit": 20
-
 }
